base/ninegate/glauth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glauth
  namespace: nine
  labels:
    app.kubernetes.io/name: glauth
    app.kubernetes.io/part-of: ninekube
    app.kubernetes.io/component: ninegate
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: glauth
  ports:
    - name: ldap
      port: 3893
      targetPort: ldap
    - name: ldaps
      port: 636
      targetPort: ldaps
      nodePort: 30636
