base/ninegate/ninegate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ninegate
  namespace: nine
  labels:
    app.kubernetes.io/name: ninegate
    app.kubernetes.io/part-of: ninekube
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ninegate
  ports:
    - name: http
      port: 80
      targetPort: http
