base/ninegate/ninegate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ninegate
  namespace: nine
  labels:
    app.kubernetes.io/name: ninegate
    app.kubernetes.io/part-of: ninekube
  annotations:
    cert-manager.io/cluster-issuer: ""
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ninegate.nine.local
      secretName: ninegate-tls
  rules:
    - host: ninegate.nine.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ninegate
                port:
                  number: 80
